@@ -1,3 +1,10 @@
+Tue, 22 Jan 2008 10:19:46 +0100 <thp@perli.net>
+Add "releasetest" target to Makefile (automated testing)
+
+	* Makefile: Add "releasetest" target that can be used to do some
+	automatic testing before releases; thanks to Götz Waschk for giving
+	some hint on "desktop-entry-validate" :)
+
 Tue, 22 Jan 2008 10:09:16 +0100 <thp@perli.net>
 Use Episode Selector for per-channel new episodes
 
